zien24_implementation/org/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_At__c</fullName>
        <label>Cancelled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Region</label>
        <referenceTo>Job_Region__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_without_VAT__c</fullName>
        <label>Price without VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>